--- a/app/src/main/res/drawable/common_marker_info_bg_right.xml
+++ b/app/src/main/res/drawable/common_marker_info_bg_right.xml
@@ -3,6 +3,6 @@
 
     <corners android:topRightRadius="4dp" android:bottomRightRadius="4dp"/>
 
-    <solid android:color="@color/colorPrimary"/>
+    <solid android:color="@color/yellow"/>
 
 </shape>
