--- a/app/src/main/res/drawable/common_market_coin_tab_bg_blue.xml
+++ b/app/src/main/res/drawable/common_market_coin_tab_bg_blue.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <stroke android:color="#2F93ED" android:width="1dp"/>
+    <stroke android:color="@color/yellow" android:width="1dp"/>
 
-    <solid android:color="#DAEDFD"/>
+    <solid android:color="@color/white"/>
+    <!--<solid android:color="#DAEDFD"/>-->
 
     <corners android:radius="4dp"/>
 
