--- a/app/src/main/res/layout/layout_message_commen.xml
+++ b/app/src/main/res/layout/layout_message_commen.xml
@@ -113,7 +113,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="15dp"
             android:layout_weight="1"
-            android:background="#f6f6f6"
+            android:background="#F7F7F7"
             android:descendantFocusability="blocksDescendants">
 
             <android.support.v7.widget.RecyclerView
