--- a/app/src/main/res/layout/layout_message_detail.xml
+++ b/app/src/main/res/layout/layout_message_detail.xml
@@ -5,10 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <ScrollView
-        android:descendantFocusability="blocksDescendants"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
+        android:descendantFocusability="blocksDescendants"
         tools:showIn="@layout/activity_message_detail">
 
         <LinearLayout
@@ -26,7 +26,7 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="15dp"
                 android:textColor="@color/text_black_cd"
-                android:textSize="18dp"
+                android:textSize="24sp"
                 tools:text="sdfsdfsdfsdfsdfsfesdfsdfsfs" />
 
             <LinearLayout
@@ -64,23 +64,23 @@
             </LinearLayout>
 
             <LinearLayout
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:gravity="center_vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/layout_left_interval"
                 android:layout_marginRight="@dimen/layout_right_interval"
                 android:background="#F7F7F7"
-                android:orientation="horizontal">
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp">
 
                 <TextView
                     android:id="@+id/tv_from"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="#F7F7F7"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
-                    android:background="#F7F7F7"
                     android:textColor="@color/app_text_gray"
                     android:textSize="14sp"
                     tools:text="sdfsdfsdfsdfsdf" />
@@ -91,32 +91,32 @@
                     android:layout_weight="1" />
 
                 <ImageView
-                    android:src="@drawable/active_browse"
                     android:layout_width="16dp"
-                    android:layout_height="16dp" />
+                    android:layout_height="16dp"
+                    android:src="@drawable/active_browse" />
 
                 <TextView
                     android:id="@+id/tv_collection"
-                    android:layout_marginLeft="3dp"
-                    android:paddingRight="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="3dp"
+                    android:paddingRight="10dp"
                     android:textColor="@color/app_text_gray"
                     tools:textSize="@dimen/msg_state_size" />
 
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/ll_root"
-                android:orientation="vertical"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            <!--<LinearLayout-->
+            <!--android:id="@+id/ll_root"-->
+            <!--android:orientation="vertical"-->
+            <!--android:layout_marginLeft="20dp"-->
+            <!--android:layout_marginRight="20dp"-->
+            <!--android:layout_marginTop="25dp"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content">-->
 
 
-            </LinearLayout>
+            <!--</LinearLayout>-->
 
             <WebView
                 android:id="@+id/webView"
@@ -124,14 +124,36 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginTop="20dp"
-                />
+                android:layout_marginTop="25dp" />
+
+            <LinearLayout
+                android:id="@+id/ll_tg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="50dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="投稿,"
+                    android:textColor="@color/txt_gray" />
+
+                <TextView
+                    android:id="@+id/tv_tg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="请点击这里" />
+                <!--  添加下划线    textView.getPaint().setFlags(Paint. UNDERLINE_TEXT_FLAG );-->
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="20dp"
                 android:gravity="center_horizontal"
                 android:orientation="vertical">
 
@@ -243,7 +265,7 @@
                     android:paddingTop="5dp"
                     android:text="@string/recommended_note"
                     android:textColor="@color/text_black_cd"
-                    android:textSize="17sp" />
+                    android:textSize="16sp" />
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recyclerView_recommended"
