--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,7 +18,7 @@
         <item name="android:drawablePadding">2dp</item>
         <item name="android:gravity">center</item>
         <item name="android:textSize">12sp</item>
-        <item name="android:textColor">@drawable/main_tab_txt_select_color</item>
+        <!--<item name="android:textColor">@drawable/main_tab_txt_select_color</item>-->
     </style>
 
     <style name="comment_input_dialog" parent="@style/Theme.AppCompat.Dialog">
