--- a/cdcommon/src/main/res/layout/activity_tab.xml
+++ b/cdcommon/src/main/res/layout/activity_tab.xml
@@ -10,7 +10,7 @@
         <android.support.design.widget.TabLayout
             app:tabIndicatorHeight="2.4dp"
             android:id="@+id/tablayout"
-            style="@style/MyTabLayout"
+            style="@style/MyTabLayout2"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:background="@color/white" />
