--- a/cdcommon/src/main/res/values/styles.xml
+++ b/cdcommon/src/main/res/values/styles.xml
@@ -14,13 +14,27 @@
 
     <style name="MyTabLayout" parent="Widget.Design.TabLayout">
         <item name="tabIndicatorColor">@color/tablayout_select</item>
-        <item name="tabIndicatorHeight">2dp</item>
+        <item name="tabIndicatorHeight">3dp</item>
         <item name="tabTextAppearance">@style/MyTabTextAppearance</item>
         <item name="tabSelectedTextColor">@color/tablayout_select</item>
     </style>
 
     <!--Tablayout 字体大小-->
     <style name="MyTabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/text_color</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
+    <style name="MyTabLayout2" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorColor">@color/app_indicator_deep_color</item>
+        <item name="tabIndicatorHeight">2dp</item>
+        <item name="tabTextAppearance">@style/MyTabTextAppearance</item>
+        <item name="tabSelectedTextColor">@color/app_indicator_deep_color</item>
+    </style>
+
+    <!--Tablayout 字体大小-->
+    <style name="MyTabTextAppearance2" parent="TextAppearance.Design.Tab">
         <item name="android:textSize">15sp</item>
         <item name="android:textColor">@color/text_color</item>
         <item name="textAllCaps">false</item>
