--- a/app/src/main/res/layout/item_plate_hot.xml
+++ b/app/src/main/res/layout/item_plate_hot.xml
@@ -40,10 +40,9 @@
 
             <TextView
                 android:id="@+id/tv_coin"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:layout_weight="1"
                 android:text="BIT"
                 android:textColor="@color/txt_gray"
                 android:textSize="12sp" />
@@ -52,7 +51,6 @@
                 android:id="@+id/tv_best_change"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
                 android:layout_weight="1"
                 android:ellipsize="end"
