--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
 
     <color name="app_title_bg">#022454</color>
     <color name="app_text_color">#2F93ED</color>
+    <color name="app_text_color_022454">#022454</color>
     <color name="app_text_color_yellow">#F6A623</color>
     <color name="app_main_txt_select_un">#A6A6A6</color>
     <color name="app_main_txt_select">#022454</color>
