--- a/app/src/main/res/drawable/common_radiobtn_select_bg.xml
+++ b/app/src/main/res/drawable/common_radiobtn_select_bg.xml
@@ -8,4 +8,5 @@
     <stroke
         android:width="0.5dp"
         android:color="@color/white" />
+    <solid android:color="@color/white"/>
 </shape>
