--- a/app/src/main/res/drawable/common_radiobtn_select_right2.xml
+++ b/app/src/main/res/drawable/common_radiobtn_select_right2.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!--<item android:state_checked="true">-->
+
+
+    <item android:state_checked="true">
+
+        <shape android:shape="rectangle">
+
+            <corners android:radius="200dp" />
+            <solid android:color="@color/white" />
+            <stroke android:width="1px" android:color="@color/txt_gray" />
+        </shape>
+
+    </item>
+
+
     <item>
         <shape android:shape="rectangle">
 
