--- a/cdcommon/src/main/res/layout/activity_tab.xml
+++ b/cdcommon/src/main/res/layout/activity_tab.xml
@@ -11,6 +11,7 @@
             app:tabIndicatorHeight="2.4dp"
             android:id="@+id/tablayout"
             style="@style/MyTabLayout2"
+            app:tabMode="fixed"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:background="@color/white" />
