--- a/app/src/main/res/layout/item_active_list.xml
+++ b/app/src/main/res/layout/item_active_list.xml
@@ -62,7 +62,7 @@
                 android:layout_weight="0.25"
                 android:layout_width="0dp"
                 android:layout_height="18dp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/text_color_ffa300"
                 android:textSize="15sp"
                 />
 
