--- a/cdcommon/src/main/res/values/colors.xml
+++ b/cdcommon/src/main/res/values/colors.xml
@@ -39,6 +39,7 @@
     <color name="bg_gray">#E2E2E2</color>
 
     <color name="bg_gray_e5e5e5">#e5e5e5</color>
+    <color name="text_color_ffa300">#ffa300</color>
 
 
     <color name="btn_white">#ffffff</color>
