--- a/app/src/main/res/layout/activity_user_my_message.xml
+++ b/app/src/main/res/layout/activity_user_my_message.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.design.widget.TabLayout
+        <com.cdkj.baselibrary.views.tablayout.TabLayout
             android:id="@+id/tablayout"
             app:tabIndicatorHeight="2.4dp"
             style="@style/MyTabLayout"
