--- a/app/src/main/res/layout/layout_main_mottom_tab.xml
+++ b/app/src/main/res/layout/layout_main_mottom_tab.xml
@@ -17,13 +17,15 @@
             android:layout_gravity="bottom"
             android:checked="true"
             android:drawableTop="@drawable/main_buttom_tab_1"
-            android:text="@string/firstpage" />
+            android:text="@string/firstpage"
+            android:textColor="@drawable/bottom_navigation_text" />
 
         <RadioButton
             android:id="@+id/radio_main_tab_2"
             style="@style/main_tab_radio"
             android:drawableTop="@drawable/main_buttom_tab_2"
-            android:text="@string/market" />
+            android:text="@string/market"
+            android:textColor="@drawable/bottom_navigation_text" />
 
         <RadioButton
             style="@style/main_tab_radio"
@@ -35,18 +37,21 @@
             android:id="@+id/radio_main_tab_3"
             style="@style/main_tab_radio"
             android:drawableTop="@drawable/main_buttom_tab_3"
-            android:text="板块" />
+            android:text="板块"
+            android:textColor="@drawable/bottom_navigation_text" />
 
         <RadioButton
             android:id="@+id/radio_main_tab_4"
             style="@style/main_tab_radio"
             android:drawableTop="@drawable/main_buttom_tab_4"
-            android:text="@string/active" />
+            android:text="@string/active"
+            android:textColor="@drawable/bottom_navigation_text" />
 
         <RadioButton
             android:id="@+id/radio_main_tab_5"
             style="@style/main_tab_radio"
             android:drawableTop="@drawable/main_buttom_tab_5"
-            android:text="@string/mind" />
+            android:text="@string/mind"
+            android:textColor="@drawable/bottom_navigation_text" />
     </RadioGroup>
 </layout>
