--- a/app/src/main/res/layout/fragment_market_coin_tab.xml
+++ b/app/src/main/res/layout/fragment_market_coin_tab.xml
@@ -11,7 +11,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <android.support.design.widget.TabLayout
+            <com.cdkj.baselibrary.views.tablayout.TabLayout
                 app:tabIndicatorHeight="2.4dp"
                 android:id="@+id/tablayout"
                 style="@style/MyTabLayout"
