--- a/app/src/main/res/layout/activity_fast_message_share.xml
+++ b/app/src/main/res/layout/activity_fast_message_share.xml
@@ -8,12 +8,12 @@
         android:orientation="vertical">
 
         <ScrollView
-            android:scrollbars="none"
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/white">
+            android:background="@color/white"
+            android:scrollbars="none">
 
             <LinearLayout
                 android:layout_width="match_parent"
