--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -39,4 +39,6 @@
     <color name="yellow">#FFA300</color>
     <color name="deep_blue">#011F4A</color>
 
+    <color name="market_color_1">#3C55AF</color>
+
 </resources>
