--- a/app/src/main/res/layout/activity_active_details.xml
+++ b/app/src/main/res/layout/activity_active_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -56,17 +57,28 @@
                     <TextView
                         android:id="@+id/tv_browse"
                         android:layout_width="0dp"
-                        android:layout_height="20dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:layout_weight="1"
                         android:textColor="#818181"
                         android:textSize="14sp" />
 
                     <TextView
-                        android:id="@+id/tv_price"
+                        android:id="@+id/tv_pass_num"
                         android:layout_width="wrap_content"
-                        android:layout_height="18dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        tools:text="已通过1/5"
+                        android:textColor="#818181"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/tv_price"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginLeft="6dp"
+                        android:layout_weight="1"
                         android:gravity="right"
                         android:text="sdfsdf"
                         android:textColor="@color/text_color_ffa300"
@@ -283,7 +295,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="44dp">
+            android:layout_height="44dp"
+            android:background="#fbfbfb">
 
             <TextView
                 android:id="@+id/tv_btn"
