--- a/app/src/main/res/layout/activity_message_detail.xml
+++ b/app/src/main/res/layout/activity_message_detail.xml
@@ -61,7 +61,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
+                android:layout_weight="0.8"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:paddingLeft="10dp"
@@ -92,29 +92,26 @@
 
                 </FrameLayout>
 
-                <View
+                <LinearLayout
+                    android:id="@+id/ll_like"
                     android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="1" />
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center">
 
-                <ImageView
-                    android:visibility="gone"
-                    android:id="@+id/img_collection"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:src="@drawable/callection_un" />
+                    <ImageView
+                        android:id="@+id/img_collection"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/active_like" />
 
-                <View
-                    android:visibility="gone"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="1" />
+                </LinearLayout>
+
 
                 <ImageView
                     android:id="@+id/img_share"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
-                    android:layout_marginRight="@dimen/layout_right_interval"
                     android:src="@drawable/share" />
             </LinearLayout>
         </LinearLayout>
